--- a/cv/index.html
+++ b/cv/index.html
@@ -600,6 +600,7 @@
 <ul>
 <li><a href="#education">Education</a>
 <ul>
+<li><a href="#titles-and-licenses">Titles and Licenses</a></li>
 <li><a href="#additional-trainings">Additional Trainings</a></li>
 </ul></li>
 <li><a href="#research-track-record">Research Track Record</a>
@@ -614,12 +615,27 @@
 <ul>
 <li><a href="#academic">Academic</a></li>
 </ul></li>
+<li><a href="#experience">Experience</a>
+<ul>
+<li><a href="#research-experience">Research experience</a></li>
+<li><a href="#clinical-experience">Clinical experience</a></li>
+<li><a href="#teaching-experience">Teaching experience</a></li>
+</ul></li>
 </ul>
 <p><br></p>
 <hr />
 </div>
 <div id="education" class="section level2">
 <h2>Education</h2>
+<div id="titles-and-licenses" class="section level3">
+<h3>Titles and Licenses</h3>
+<ul>
+<li>Hypnotherapist <sub><sup><em>(2019, Petra Hypnosis, Singapore)</em></sup></sub></li>
+<li>Doctor of Psychology <sub><sup><em>(2018, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
+<li>Cognitive and Behavioural Psychotherapist <sub><sup><em>(2017, AFTCC, France)</em></sup></sub></li>
+<li>Clinical Neuropsychologist <sub><sup><em>(2014, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
+</ul>
+</div>
 <div id="additional-training" class="section level3">
 <h3>Additional Training</h3>
 <ul>
@@ -629,7 +645,6 @@
 </ul></li>
 <li><strong>Clinical</strong>
 <ul>
-<li>Hypnotherapy <sub><sup><em>(2019, Petra Hypnosis, Singapore)</em></sup></sub></li>
 <li>Mindfulness based on Compassion and Insight <sub><sup><em>(2016, Sainte-Anne Hospital, France)</em></sup></sub></li>
 <li>First Aid <sub><sup><em>(2016, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
 </ul></li>
@@ -673,6 +688,7 @@
 </div>
 <div id="editorial-responsibilities" class="section level3">
 <h3><strong>Editorial Responsibilities</strong></h3>
+<!-- link to publon? -->
 <!-- https://www.tablesgenerator.com/markdown_tables# -->
 <table>
 <colgroup>
@@ -691,7 +707,12 @@
 <tr class="odd">
 <td><em>2020–present</em></td>
 <td><strong>Associate Editor</strong></td>
-<td>Frontiers in Psychology: <em>Quantitative Psychology and Measurement</em></td>
+<td><a href="https://www.frontiersin.org/journals/all/sections/quantitative-psychology-and-measurement#">Frontiers in Psychology: <em>Quantitative Psychology and Measurement</em></a></td>
+</tr>
+<tr class="even">
+<td><em>2017–present</em></td>
+<td><strong>Reviewer</strong></td>
+<td><a href="https://joss.theoj.org/">Journal of Open Source Software</a>, <a href="https://www.nature.com/srep/?gclid=CjwKCAjwtqj2BRBYEiwAqfzur7ujgdlx-VyXyXVuMW4-yzvxFpYPSKta-TzUGPHKignv5Og6vwaCOxoCK6cQAvD_BwE">Scientific Reports</a></td>
 </tr>
 </tbody>
 </table>
@@ -699,7 +720,7 @@
 </div>
 <div id="scientific-impact" class="section level3">
 <h3><strong>Scientific Impact</strong></h3>
-<p>The data was automatically retrieved from Google Scholar on the 24 May 2020.</p>
+<p>The data was automatically retrieved from Google Scholar on the 25 May 2020.</p>
 <img src="img/plot_impact.png" width="100%" />
 <center>
 <sup><em>Cumulative citations and publication number, automatically scrapped from Google Scholar.</em></sup>
@@ -849,7 +870,7 @@
 <h2>Teaching Record</h2>
 <div id="academic" class="section level3">
 <h3>Academic</h3>
-<p>I’ve already given academic lectures (total hours since 2014: <strong>400</strong>) on the following topics (see <a href="https://dominiquemakowski.github.io/files/CV_DominiqueMakowski.pdf">CV</a> for details):</p>
+<p>I have given academic lectures (total hours since 2014: <strong>400</strong>) on the following topics (see <a href="teaching-experience">experience</a> for details):</p>
 <ul>
 <li><strong>Neuropsychology</strong> (<em>192 hours, 2nd year, 3rd year and master level</em>):
 <ul>
@@ -886,9 +907,178 @@
 <li>Creativity</li>
 </ul></li>
 </ul></li>
-<li><strong>Cognitive Psychology</strong> (<em>48 hours, 3rd year level</em>): Models of working memory, mental imagery and categorisation</li>
+<li><strong>Cognitive Psychology</strong> (<em>48 hours, 3rd year level</em>):
+<ul>
+<li>Working memory</li>
+<li>Mental imagery and categorisation</li>
+</ul></li>
 <li><strong>Other</strong> (<em>16 hours</em>): Internet, ethics, digital rights</li>
 </ul>
+</div>
+<div id="technical" class="section level3">
+<h3>Technical</h3>
+<p>I have performed several technical trainings and courses on topics like:</p>
+<ul>
+<li>Statistics using R</li>
+<li>Experiment creation using Python</li>
+<li>How to acquire electrophysiological (EDA, ECG, EMG) signal using Biopac and the AcqKnowledge software</li>
+<li>How to ask and handle sensitive personal information about patients or participants</li>
+</ul>
+<hr />
+</div>
+</div>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
+<!-- https://www.tablesgenerator.com/markdown_tables# -->
+<div id="research-experience" class="section level3">
+<h3>Research Experience</h3>
+<table>
+<colgroup>
+<col width="3%" />
+<col width="3%" />
+<col width="16%" />
+<col width="5%" />
+<col width="71%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th></th>
+<th>Position</th>
+<th>Institution</th>
+<th>Supervisor</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>2019–present</em></td>
+<td><strong>Research Fellow</strong></td>
+<td>Clinical Brain Lab’, Nanyang Technological University, Singapore</td>
+<td>Prof. Annabel Chen</td>
+<td>First postdoc position, working on a project funded by the ministry of defence about the neurocognitive correlates of deception and lies. Responsible for studies design and completion, data analysis, publications and co-supervision of one PhD student, two research assistants and several undergraduate interns.</td>
+</tr>
+<tr class="even">
+<td><em>2012</em></td>
+<td><strong>Research Assistant</strong></td>
+<td>Developmental Psychology Lab’ (LaPsyDé), Université de Paris, France</td>
+<td>Prof. Grégoire Borst</td>
+<td>Data collection for an experiment on emotions and mental rotation (<a href="http://psycnet.apa.org/journals/emo/13/5/811/">Borst, 2016</a>).</td>
+</tr>
+<tr class="odd">
+<td><em>2011</em></td>
+<td><strong>Research Assistant</strong></td>
+<td>Memory and Cognition Lab’ (LMC), Université de Paris, France</td>
+<td>Prof. Serge Nicolas</td>
+<td>Experiment creation and data collection for a study on memory, salience and bizarreness effect.</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="clinical-experience" class="section level3">
+<h3>Clinical Experience</h3>
+<table>
+<colgroup>
+<col width="3%" />
+<col width="7%" />
+<col width="6%" />
+<col width="15%" />
+<col width="6%" />
+<col width="61%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th></th>
+<th>Position</th>
+<th>Department</th>
+<th>Institution</th>
+<th>Supervisor</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>2017-18</em></td>
+<td><strong>Intern</strong> <sub>(512 hours)</sub></td>
+<td>Adult psychiatry</td>
+<td>Pitié-Salpêtrière Hospital, Paris, France</td>
+<td>Dr. Séverine Hatif</td>
+<td>Neuropsychology internship (fifth year). Assessment and diagnostic of psychiatric or neurological illnesses among adults, as well as development and application of cognitive rehabilitation programs.</td>
+</tr>
+<tr class="even">
+<td><em>2015-17</em></td>
+<td><strong>Intern</strong> <sub>(304 hours)</sub></td>
+<td>Geriatric psychiatry</td>
+<td>Sainte-Anne Hospital, ParisStartFragment, France</td>
+<td>Emmanuel Guiliano</td>
+<td>Neuropsychology internship (fourth year). Assessment and diagnostic of psychiatric and neurological illnesses among an elderly population.</td>
+</tr>
+<tr class="odd">
+<td><em>2014-16</em></td>
+<td><strong>Intern</strong> <sub>(96 hours)</sub></td>
+<td>Gerontology</td>
+<td>La Porte Verte Hospital, Versailles, France</td>
+<td>Sophie Fleury</td>
+<td>Neuropsychology internship (third year). Observation of assessment and diagnostic of memory related deficits such as neurodegenerative diseases, somatic ageing-related illnesses or depression.</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="teaching-experience" class="section level3">
+<h3>Teaching Experience</h3>
+<table>
+<colgroup>
+<col width="1%" />
+<col width="6%" />
+<col width="5%" />
+<col width="5%" />
+<col width="17%" />
+<col width="63%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th></th>
+<th>Position</th>
+<th>Institution</th>
+<th>PI</th>
+<th>Context</th>
+<th>Topic</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>2017-18</em></td>
+<td><strong>Lecturer</strong> <sub>(192 hours)</sub></td>
+<td>Université de Paris, France</td>
+<td>Prof. Isabelle Jambaqué</td>
+<td>Clinical Neuropsychology (for bachelor and master degrees).</td>
+<td>Neurology and psychiatry (main neurodegenerative, neurological and psychiatric disorders), assessment (examination, diagnostic, psychometry), rehabilitation and psychotherapy (CBT, mindfulness-based therapies, cognitive rehabilitation, practice supervision), general neuroscience and psychology (neuroanatomy, emotion regulation…).</td>
+</tr>
+<tr class="even">
+<td><em>2015-17</em></td>
+<td><strong>Teaching assistant</strong> <sub>(144 hours)</sub></td>
+<td>Université de Paris, France</td>
+<td>Dr. Christophe Mouchiroud</td>
+<td>Differential cognitive psychology for first year students.</td>
+<td>Experimental methodology (assessment and related problems, scientific reasoning, psychometric properties of tests and questionnaires, statistics…) and introduction to concepts such as intelligence, personality and creativity.</td>
+</tr>
+<tr class="odd">
+<td><em>2014-16</em></td>
+<td><strong>Teaching assistant</strong> <sub>(48 hours)</sub></td>
+<td>Université de Paris, France</td>
+<td>Prof. Todd Lubart</td>
+<td>Cognitive psychology for third year students.</td>
+<td>Models of working memory, mental imagery and categorisation.</td>
+</tr>
+<tr class="even">
+<td><em>2013</em></td>
+<td><strong>Teaching assistant</strong> <sub>(16 hours)</sub></td>
+<td>Université de Paris, France</td>
+<td>Dr. Christian Fondrat</td>
+<td>Introduction to the use of Internet and on-line university services for first year students.</td>
+<td>Internet security, anonymity, legal rights, course organisation.</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 </div>
