--- a/publication/blonde2020medio/index.html
+++ b/publication/blonde2020medio/index.html
@@ -782,7 +782,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Blondé, P., Makowski D., Sperduti, M., &amp; Piolino, P. (2020). In Medio Stat Virtus: intermediate levels of mind wandering improve episodic memory encoding in a virtual environment. <em>Psychological Research</em></div>
+          <div class="col-12 col-md-9">Blondé, P., Makowski D., Sperduti, M., &amp; Piolino, P. (2020). In Medio Stat Virtus: intermediate levels of mind wandering improve episodic memory encoding in a virtual environment. <em>Psychological Research</em>, 1-13</div>
         </div>
       </div>
       <div class="col-md-1"></div>
