--- a/cv/index.html
+++ b/cv/index.html
@@ -630,10 +630,10 @@
 <div id="titles-and-licenses" class="section level3">
 <h3>Titles and Licenses</h3>
 <ul>
-<li>Hypnotherapist <sub><sup><em>(2019, Petra Hypnosis, Singapore)</em></sup></sub></li>
-<li>Doctor of Psychology <sub><sup><em>(2018, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
+<li>Certified Hypnotherapist (CH) <sub><sup><em>(2019, National Guild of Hypnotists - NGH)</em></sup></sub></li>
+<li>Doctor of Psychology (PhD) <sub><sup><em>(2018, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
 <li>Cognitive and Behavioural Psychotherapist <sub><sup><em>(2017, AFTCC, France)</em></sup></sub></li>
-<li>Clinical Neuropsychologist <sub><sup><em>(2014, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
+<li>Clinical Neuropsychologist (MSc) <sub><sup><em>(2014, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
 </ul>
 </div>
 <div id="additional-training" class="section level3">
@@ -645,6 +645,7 @@
 </ul></li>
 <li><strong>Clinical</strong>
 <ul>
+<li>Hypnotherapy <sub><sup><em>(2019, Petra Hypnosis Centre, Singapore)</em></sup></sub></li>
 <li>Mindfulness based on Compassion and Insight <sub><sup><em>(2016, Sainte-Anne Hospital, France)</em></sup></sub></li>
 <li>First Aid <sub><sup><em>(2016, University of Sorbonne Paris Cité, France)</em></sup></sub></li>
 </ul></li>
@@ -720,7 +721,7 @@
 </div>
 <div id="scientific-impact" class="section level3">
 <h3><strong>Scientific Impact</strong></h3>
-<p>The data was automatically retrieved from Google Scholar on the 25 May 2020.</p>
+<p>The data was automatically retrieved from Google Scholar on the 27 May 2020.</p>
 <img src="img/plot_impact.png" width="100%" />
 <center>
 <sup><em>Cumulative citations and publication number, automatically scrapped from Google Scholar.</em></sup>
@@ -779,7 +780,10 @@
 <p align="center">
 <em>2020</em>
 </p>
-<p><strong>Makowski, D.</strong>, Pham, T., Lau Z. J., Leow D., Raine A., &amp; Chen, S. H. <em>(under review)</em>. <a href="https://dominiquemakowski.github.io/publication/makowski2020structure/makowski2020structure.pdf">The Structure of Deception: Validation of the Lying Profile Questionnaire</a>.</p>
+<p><strong>Makowski, D.</strong>, Pham, T., Lau, Z. J., Brammer, J. C., Lespinasse, F., Pham, H., Schötzel, C., &amp; Chen, S. H. <em>(in preparation)</em>. <a href="https://github.com/neuropsychology/NeuroKit#quick-example">NeuroKit2: A Python Toolbox for Neurophysiological Signal Processing</a>.</p>
+<p><strong>Makowski, D.</strong>, Ben-Shachar, M. S., Patil, I., &amp; Lüdecke, D. <em>(<a href="https://github.com/openjournals/joss-reviews/issues/2233">submitted</a>)</em>. <a href="https://github.com/easystats/correlation#correlation-">Methods and Algorithms for Correlation Analysis in R</a>. <em>Journal of Open Source Software</em>.</p>
+<p>Blondé, P., <strong>Makowski D.</strong>, Sperduti, M., &amp; Piolino, P. (2020). <a href="https://dominiquemakowski.github.io/publication/blonde2020medio/blonde2020medio.pdf">In Medio Stat Virtus: intermediate levels of mind wandering improve episodic memory encoding in a virtual environment</a>. <em>Psychological Research</em>, 1-13.</p>
+<p><strong>Makowski, D.</strong>, Pham, T., Lau, Z. J., Leow, D., Raine, A., &amp; Chen, S. H. <em>(under review)</em>. <a href="https://dominiquemakowski.github.io/publication/makowski2020structure/makowski2020structure.pdf">The Structure of Deception: Validation of the Lying Profile Questionnaire</a>.</p>
 <p>Girardeau, J. C., Blondé, P., <strong>Makowski D.</strong>, Abram, M., Piolino, P., &amp; Sperduti, M. (2020). <a href="https://dominiquemakowski.github.io/publication/girardeau2020impact/girardeau2020impact.pdf">The impact of state and dispositional mindfulness on prospective memory: A virtual reality study</a>. <em>Consciousness and Cognition, 81</em>, 102920.</p>
 <p align="center">
 <em>2019</em>
@@ -930,6 +934,7 @@
 <div id="experience" class="section level2">
 <h2>Experience</h2>
 <!-- https://www.tablesgenerator.com/markdown_tables# -->
+<p><br></p>
 <div id="research-experience" class="section level3">
 <h3>Research Experience</h3>
 <table>
@@ -973,6 +978,7 @@
 </tr>
 </tbody>
 </table>
+<p><br></p>
 </div>
 <div id="clinical-experience" class="section level3">
 <h3>Clinical Experience</h3>
@@ -1022,6 +1028,7 @@
 </tr>
 </tbody>
 </table>
+<p><br></p>
 </div>
 <div id="teaching-experience" class="section level3">
 <h3>Teaching Experience</h3>
