--- a/cv/index.html
+++ b/cv/index.html
@@ -721,7 +721,7 @@
 </div>
 <div id="scientific-impact" class="section level3">
 <h3><strong>Scientific Impact</strong></h3>
-<p>The data was automatically retrieved from Google Scholar on the 27 May 2020.</p>
+<p>The data was automatically retrieved from Google Scholar on the 28 June 2020.</p>
 <img src="img/plot_impact.png" width="100%" />
 <center>
 <sup><em>Cumulative citations and publication number, automatically scrapped from Google Scholar.</em></sup>
@@ -737,11 +737,11 @@
 <tbody>
 <tr class="odd">
 <td align="left">Total number of publications</td>
-<td align="right">26</td>
+<td align="right">27</td>
 </tr>
 <tr class="even">
 <td align="left">Total number of citations</td>
-<td align="right">237</td>
+<td align="right">281</td>
 </tr>
 <tr class="odd">
 <td align="left">Average number of publications / Year</td>
@@ -749,7 +749,7 @@
 </tr>
 <tr class="even">
 <td align="left">Average number of citations / Year</td>
-<td align="right">34</td>
+<td align="right">40</td>
 </tr>
 <tr class="odd">
 <td align="left">h-index</td>
@@ -1087,6 +1087,14 @@
 </tbody>
 </table>
 </div>
+</div>
+<div id="references" class="section level2">
+<h2>References</h2>
+<ul>
+<li><strong>Prof. Annabel Chen</strong> (Postdoc supervisor): <a href="mailto:AnnabelChen@ntu.edu.sg" class="email">AnnabelChen@ntu.edu.sg</a></li>
+<li><strong>Dr. Marco Sperduti</strong> (PhD cosupervisor): <a href="mailto:marco.sperduti@parisdescartes.fr" class="email">marco.sperduti@parisdescartes.fr</a></li>
+<li><strong>Prof. Pascale Piolino</strong> (PhD cosupervisor): <a href="mailto:pascale.piolino@parisdescartes.fr" class="email">pascale.piolino@parisdescartes.fr</a></li>
+</ul>
 </div>
 </div>
   
