--- a/cv/index.html
+++ b/cv/index.html
@@ -700,6 +700,7 @@
 <div id="grants-honours-and-awards" class="section level3">
 <h3><strong>Grants, Honours and Awards</strong></h3>
 <ul>
+<li><em>2020</em> - The <a href="https://www.psychonomic.org/page/2020BestArticleAwards"><em>Psychonomic Society Best Article Award</em></a> for <a href="https://dominiquemakowski.github.io/publication/makowski2019phenomenal/">Makowski et al., 2019</a> ($1000)</li>
 <li><em>2020</em> - Society for the Improvement of Psychological Science (SIPS) Commendation for the <a href="https://github.com/easystats/bayestestR"><em>bayestestR</em></a> package</li>
 <li><em>2014</em> - Ministerial PhD scholarship (3 years - 80 000€)</li>
 </ul>
