--- a/cv/index.html
+++ b/cv/index.html
@@ -657,6 +657,11 @@
 <div id="additional-training" class="section level3">
 <h3>Additional Training</h3>
 <ul>
+<li><strong><em>Currently on-going</em></strong>
+<ul>
+<li>History of Arts and Archaeology (BA - 1<sup>st</sup> year) <sub><sup><em>(2020 – current, Université de Lille, France)</em></sup></sub></li>
+<li>Italian (A2 level) <sub><sup><em>(2019 – current, APICS, Singapore)</em></sup></sub></li>
+</ul></li>
 <li><strong>Teaching</strong>
 <ul>
 <li>Academic Teaching <sub><sup><em>(2017, Université de Paris, France)</em></sup></sub></li>
@@ -688,7 +693,7 @@
 </ul></li>
 <li><strong>Miscellaneous</strong>
 <ul>
-<li>History of Arts <sub><sup><em>(2017-2018, École du Louvre, Paris)</em></sup></sub></li>
+<li>Introduction to History of Arts <sub><sup><em>(2017-2018, École du Louvre, France)</em></sup></sub></li>
 </ul></li>
 </ul>
 <p><br></p>
