--- a/cv/index.html
+++ b/cv/index.html
@@ -688,6 +688,7 @@
 </ul></li>
 <li><strong>Programming</strong>
 <ul>
+<li>Creating Online Experiments in PsychoPy and Pavlovia <sub><sup><em>(2020, University of Nottingham, UK)</em></sup></sub></li>
 <li>P4N 2016: Python for Neuroscience (and Psychology) <sub><sup><em>(2016, University of Nottingham, UK)</em></sup></sub></li>
 <li>Scientific Programming with Python and Software Engineering Best Practices <sub><sup><em>(2016, Telecom ParisTech, France)</em></sup></sub></li>
 </ul></li>
