--- a/cv/index.html
+++ b/cv/index.html
@@ -753,7 +753,7 @@
 </center>
 <img src="img/plot_citations.png" width="100%" />
 <center>
-<sup><em>Sometimes, the total number of citations is strongly driven by few particularly well-cited publications. This plot, showing the number of citations for each publication, suggests that most of my publications are homogeneously cited.</em></sup>
+<sup><em>Sometimes, the total number of citations is strongly driven by few particularly well-cited publications. This plot, showing the number of citations for each publication, suggests that most of my publications are rather homogeneously cited.</em></sup>
 </center>
 <p><br></p>
 <table>
