--- a/index.html
+++ b/index.html
@@ -767,8 +767,8 @@
     <h1>About me</h1>
 
     <p>Trained as neuropsychologist, CBT psychotherapist <sub><sup>(<em>and</em> 
-<a href="https://dominiquemakowski.github.io/cv/#titles-and-licenses" target="_blank" rel="noopener"><em><strong>others</strong></em></a></sup></sub>, I am currently working as a postdoc at the 
-<a href="http://www.clinicalbrain.org/" target="_blank" rel="noopener"><strong>Clinical Brain Lab</strong></a> in Singapore on the neuroscience of deception 😏. I&rsquo;m fluent in French, English, Polish, Python, and currently learning Italian. My main figures of reference are Epictetus, Don Giovanni and Yoda. My interests include scientific methodology, history of art and religion, as well as philosophy. My research focuses on aspects of 
+<a href="https://dominiquemakowski.github.io/cv/#titles-and-licenses" target="_blank" rel="noopener"><em><strong>others</strong></em></a>)</sup></sub>, I am currently working as a postdoc at the 
+<a href="http://www.clinicalbrain.org/" target="_blank" rel="noopener"><strong>Clinical Brain Lab</strong></a> in Singapore on the neuroscience of deception 😏. I&rsquo;m fluent in French, English, Polish, Python, and currently learning Italian. My main figures of reference are Epictetus, Hannibal and Yoda. My interests include scientific methodology, history of art and religion, as well as philosophy. My research focuses on aspects of 
 <a href="research/"><strong>reality bending</strong></a> (e.g., fiction, deception or altered states of consciousness such as through meditation or immersion).</p>
 
 
