--- a/cv/index.html
+++ b/cv/index.html
@@ -649,10 +649,14 @@
 <h3>Titles and Licenses</h3>
 <ul>
 <li>Certified Hypnotherapist (CH) <sub><sup><em>(2019, National Guild of Hypnotists - NGH)</em></sup></sub></li>
-<li>Doctor of Psychology (PhD) <sub><sup><em>(2018, Université de Paris, France)</em></sup></sub></li>
+<li>Doctor of Psychology (<strong>PhD</strong>) <sub><sup><em>(2018, Université de Paris, France)</em></sup></sub></li>
 <li>Cognitive and Behavioural Psychotherapist <sub><sup><em>(2017, AFTCC, France)</em></sup></sub></li>
-<li>Clinical Neuropsychologist (BA, MSc) <sub><sup><em>(2014, Université de Paris, France)</em></sup></sub></li>
+<li>Clinical Neuropsychologist (<strong>BSc</strong>, <strong>MSc</strong>) <sub><sup><em>(2014, Université de Paris, France)</em></sup></sub></li>
 </ul>
+<!-- ### University Education -->
+<!-- - **PhD** in Psychology <sub><sup>*(2018, University of Paris)*</sup></sub> -->
+<!-- - **MSc** in Clinical Neuropsychology and Cognitive Psychology <sub><sup>*(2014, University of Paris)*</sup></sub> -->
+<!-- - **BSc** in Psychology <sub><sup>*(2012, University of Paris)*</sup></sub> -->
 </div>
 <div id="additional-training" class="section level3">
 <h3>Additional Training</h3>
@@ -746,7 +750,7 @@
 </div>
 <div id="scientific-impact" class="section level3">
 <h3><strong>Scientific Impact</strong></h3>
-<p>The data was automatically retrieved from Google Scholar on the 25 October 2020.</p>
+<p>The data was automatically retrieved from Google Scholar on the 13 November 2020.</p>
 <img src="img/plot_impact.png" width="100%" />
 <center>
 <sup><em>Cumulative citations and publication number, automatically scrapped from Google Scholar.</em></sup>
@@ -770,7 +774,7 @@
 </tr>
 <tr class="even">
 <td align="left">Total number of citations</td>
-<td align="right">424</td>
+<td align="right">452</td>
 </tr>
 <tr class="odd">
 <td align="left">Average number of publications / Year</td>
@@ -778,7 +782,7 @@
 </tr>
 <tr class="even">
 <td align="left">Average number of citations / Year</td>
-<td align="right">61</td>
+<td align="right">65</td>
 </tr>
 <tr class="odd">
 <td align="left">h-index</td>
