--- a/index.html
+++ b/index.html
@@ -2489,7 +2489,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/time_computational_limit/" >Time as a Computational Limit</a>
+      <a href="/post/time_computational_limit/" >Time as a computational limit</a>
     </h3>
 
     
