--- a/publication/index.html
+++ b/publication/index.html
@@ -600,7 +600,7 @@
       
       <div class="article-style"><div class="alert alert-warning">
   <div>
-    <strong>Disclaimer:</strong> The rights of the publications go to the publishers. As a token of respect for their tremendous contribution to research, please refrain from downloading the PDFs if you&rsquo;re not my friend. Fortunately, all visitors of my website are my friends. 🤗
+    <strong>Disclaimer:</strong> The rights of the publications go to the publishers. As a token of respect for their tremendous contribution to science, please refrain from downloading the PDFs if you&rsquo;re not my friend. Fortunately, all visitors of my website are my friends 🤗
   </div>
 </div>
 
