--- a/index.html
+++ b/index.html
@@ -2494,7 +2494,7 @@
 
     
     <div class="article-style">
-      Can you name one thing in this photo? It all looks familiar, but something&rsquo;s off
+      Can you name one thing in this photo? It all looks familiar, but something is off.
     </div>
     
 
