deploy: af8ea589df53ae881d5e4d60aa9640fc0ef93241

--- a/cv/index.html
+++ b/cv/index.html
@@ -824,7 +824,7 @@
   <div>
     <p>You can download the <em>PDF</em> version of my CV with the link below:</p>
 <ul>
-<li><a href="/[resum%c3%a9]%28https:/dominiquemakowski.github.io/CV/%29" target="_blank">CV - PDF</a></li>
+<li><a href="https://dominiquemakowski.github.io/CV/"><strong>CV - PDF</strong></a></li>
 </ul>
   </div>
 </div>
