--- a/project/easystats/index.html
+++ b/project/easystats/index.html
@@ -1159,6 +1159,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/patientassessmentapp/">Patient Assessment</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
