--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/dominique-makowski/avatar_hu00a6511eb680d8c6f0be3e6a4cf846b2_2691424_270x270_fill_q75_lanczos_center.jpeg" alt="Dominique Makowski">
+           src="/authors/dominique-makowski/avatar_hu8ec970fed8493c9666eb1aeeafcfd774_2053074_270x270_fill_lanczos_center_3.png" alt="Dominique Makowski">
       
 
       <div class="portrait-title">
