--- a/cv/index.html
+++ b/cv/index.html
@@ -1013,7 +1013,7 @@
             <div>
           
 
-              <div class="section-subheading card-title exp-title text-muted my-0">Doctor of Psychology (PhD)</div>
+              <div class="section-subheading card-title exp-title text-muted my-0">Doctor in Psychology (PhD)</div>
               <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://www.theses.fr/2018USPCB188" target="_blank" rel="noopener">Université de Paris</a></div>
               <div class="text-muted exp-meta">
                 2014 –
@@ -1105,7 +1105,7 @@
             <div>
           
 
-              <div class="section-subheading card-title exp-title text-muted my-0">Clinical Neuropsychologist (BSc, MSc)</div>
+              <div class="section-subheading card-title exp-title text-muted my-0">Clinical Neuropsychologist (BSc, MSc/MPsych)</div>
               <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://psychologie.u-paris.fr/" target="_blank" rel="noopener">Université de Paris</a></div>
               <div class="text-muted exp-meta">
                 2009 –
